zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/transaction_hashes@mainnet_0.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
expression: stored_transaction_hashes
---
[
  TransactionHashByLocation(
    loc: Some(TransactionLocation(
      height: Height(0),
      index: TransactionIndex(0),
    )),
    hash: "c4eaa58879081de3c24a7b117ed2b28300e7ec4c4c1dff1d3f1268b7857a4ddb",
  ),
]
