zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/transaction_hashes@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 245
expression: stored_transaction_hashes

---
[
  TransactionHash(
    loc: TransactionLocation(
      height: Height(0),
      index: 0,
    ),
    hash: "c4eaa58879081de3c24a7b117ed2b28300e7ec4c4c1dff1d3f1268b7857a4ddb",
  ),
  TransactionHash(
    loc: TransactionLocation(
      height: Height(1),
      index: 0,
    ),
    hash: "851bf6fbf7a976327817c738c489d7fa657752445430922d94c983c0b9ed4609",
  ),
]
