zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/transaction_hashes@testnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 274
expression: stored_transaction_hashes

---
[
  TransactionHash(
    loc: TransactionLocation(
      height: Height(0),
      index: TransactionIndex(0),
    ),
    hash: "c4eaa58879081de3c24a7b117ed2b28300e7ec4c4c1dff1d3f1268b7857a4ddb",
  ),
  TransactionHash(
    loc: TransactionLocation(
      height: Height(1),
      index: TransactionIndex(0),
    ),
    hash: "f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75",
  ),
]
