zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/transactions@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 275
expression: stored_transactions

---
[
  TransactionData(
    loc: TransactionLocation(
      height: Height(0),
      index: TransactionIndex(0),
    ),
    transaction: "01000000010000000000000000000000000000000000000000000000000000000000000000ffffffff4d04ffff071f0104455a6361736830623963346565663862376363343137656535303031653335303039383462366665613335363833613763616331343161303433633432303634383335643334ffffffff010000000000000000434104678afdb0fe5548271967f1a67130b7105cd6a828e03909a67962e0ea1f61deb649f6bc3f4cef38c4f35504e51ec112de5c384df7ba0b8d578a4c702b6bf11d5fac00000000",
  ),
  TransactionData(
    loc: TransactionLocation(
      height: Height(1),
      index: TransactionIndex(0),
    ),
    transaction: "01000000010000000000000000000000000000000000000000000000000000000000000000ffffffff025100ffffffff0250c30000000000002321027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875acd43000000000000017a9147d46a730d31f97b1930d3368a967c309bd4d136a8700000000",
  ),
]
